# regrade

./: .gitignore  CHANGES.md  Makefile  README.md  dune-project  grader.opam  regrade.opam
.github/workflows/: build.yml
src/: Makefile  assignment.ml  common.ml  dune  grader.ml  regrade.ml  test.csv  test.yml
